fix overflow for phone

--- a/docs/assets/css/mm-onoffcanvas.css
+++ b/docs/assets/css/mm-onoffcanvas.css
@@ -1,5 +1,6 @@
 .left-aside {
   width: 256px;
+  overflow-y: auto;
 }
 .left-aside ul {
   margin: 0;
